# csci-430-week3

./: .clang-tidy  .gitignore  CMakeLists.txt  Evidence-Of-Build.md  Makefile  README.md
backend/intel8008/: Intel8008.td  Intel8008MCTargetDesc.cpp  Intel8008MCTargetDesc.h
demo/: example.fakelang  example.ll
docs/: TableGen-Driven 8008 Demo Backend.docx  tablegen.md
src/: AST.h  CodeGen.cpp  CodeGen.h  IRAnnotator.cpp  IRAnnotator.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.h  intel8008_info.cpp  main.cpp
tests/: CodeGenTests.cpp  E2EExampleTest.cpp  LexerTests.cpp  ParserTests.cpp
